--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
           <li>
             <a href="#home" class="nav-link active"> Home </a>
           </li>
-          <li>
-            <a href="#projects" class="nav-link"> Projects </a>
-          </li>
+
           <li>
             <a href="#about" class="nav-link"> About me </a>
           </li>
@@ -100,29 +98,6 @@
     </div>
 
     <!-- =============== projects section ============ -->
-    <div class="project-section section" id="projects">
-      <h1 class="section-header">Projects(opsional bisa di ganti)</h1>
-
-      <div class="project project-1 flex">
-        <div class="project-content flex">
-          <h1 class="project-header">
-            mungkin bisa di tulis sama bersangkutan
-          </h1>
-
-          <p class="project-description">
-            (project apa aja yang pernah di buat atau bisa di ganti lagi)
-          </p>
-        </div>
-      </div>
-
-      <div class="project project-2 flex">
-        <div class="project-content flex">
-          <h1 class="project-header">ini juga</h1>
-
-          <p class="project-description">(project description )</p>
-        </div>
-      </div>
-    </div>
 
     <!-- =============== About Section ==============  -->
     <div class="about-section section" id="about">
@@ -134,7 +109,7 @@
         </div>
 
         <div class="about-info">
-          <h1 class="content-header">ya di isi sama bersangkutan juga</h1>
+          <h1 class="content-header">hallo nama aku Fazla</h1>
 
           <p class="content-body">(bagian cerita tentang diri kita)</p>
         </div>
